# curriculum-classifier

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
curriculum_classifier/utils/: utils.py
notebooks/: demo.ipynb
src/classifiers/: curriculum_classifier.py
src/utils/: learning_difficulty.py  utils.py
