[tool.poetry]
name = "group-sensitive-curriculum-classifier"
version = "0.1.0"
description = ""
authors = ["Tine Šuster <tine.suster@gmai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
